# Cores-VeeR-EH1

EH1-sdk/: .gitignore  CMakeLists.txt
EH1-sdk/drivers/linkerscript/: EH1_link.ld
EH1-sdk/drivers/startup/: crt0.s  flash_crt.S
EH1-sdk/examples/01_hello_world/: hello_world.s
EH1-sdk/examples/02_cmark/: CMakeLists.txt
EH1-sdk/examples/04_cmark_dccm/: CMakeLists.txt
EH1-sdk/libc/include/: extern.h  limits.h  stdio.h  string.h
EH1-sdk/tools/cmake/: func.cmake
sdk/: Makefile  env.sh
sdk/build.ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CopyOfCMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
sdk/build.ninja/drivers/: cmake_install.cmake
sdk/build.ninja/examples/01_hello_world/: cmake_install.cmake
sdk/build.ninja/libc/: cmake_install.cmake
sdk/drivers/: CMakeLists.txt
sdk/drivers/common/: defines.h
sdk/examples/01_hello/: main.c
sdk/examples/01_hello_world/: CMakeLists.txt
sdk/examples/02_cmark/: cmark.c
sdk/examples/03_cmark_iccm/: CMakeLists.txt
sdk/libc/: CMakeLists.txt
sdk/libc/include/: defines.h  inttypes.h  stddef.h
sdk/tools/cmake/: compiler.cmake  func.cmake  toolchain.cmake
testbench/: link.ld  tb_top.sv
tools/: Makefile  buildcase  cmark.dis  cmark.map  crt0.cpp.s  hello_world.cpp.s  hello_world.dis  hello_world.map  printf.map
tools/obj_dir/: Vtb_top.h  Vtb_top__ver.d
